Amend media query rules of header and hero image of index.html for screens with max width of 800px and below to fix nav menu sizing and contrasts issues of text over hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,6 +347,7 @@ h1 {
   }
   
   #nav-menu {
+    width: 100%;
     margin: 0 auto;
     display: block;
   }
@@ -357,6 +358,10 @@ h1 {
   
   #nav-menu li {
     margin: 0 1.5%;
+  }
+
+  #text-overlay h2 {
+    padding-top: 50px;
   }
  
 }
